--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -8,7 +8,8 @@ Quick install
 1. Install Python 3.8 or newer.
 2. Run the setup helper to install packages and create `config/setup.env` if needed:
    `./setup.sh`
-3. Edit `config/setup.env` with your tokens and API keys.
+3. Run the interactive configuration helper to supply your tokens and API keys:
+   `python configure.py`
 4. Start any bot (or pass its name to `./setup.sh` to launch immediately):
    - `python grimm_bot.py`
    - `python bloom_bot.py`
@@ -53,11 +54,11 @@ Detailed steps
      cp config/env_template.env config/setup.env
      ```
      (On Windows you can use `copy` instead of `cp`.)
-   - Edit `config/setup.env` in a text editor:
+   - You can fill in credentials interactively by running:
      ```
-     notepad config/setup.env
+     python configure.py
      ```
-     Fill in your Discord tokens and any API keys. Example entries:
+     This script updates `config/setup.env` for you. Example entries include:
      ```
      GRIMM_DISCORD_TOKEN=your_grimm_token_here
      BLOOM_DISCORD_TOKEN=your_bloom_token_here
